--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body{
 header{
     display: flex;
     justify-content:space-between;
-    align-content: center;
+    align-items: center;
     padding: 5% 10%;
 }
 
@@ -34,12 +34,16 @@ header{
     list-style: none;
     font-weight: 500;
     color: #242E52;
-    gap: 28px;
 }
 
 .headerNav li{
     display: inline-block;
     margin: 0 5px;
+    background-color: #FFFFFF;
+}
+
+.headerNav a{
+    color: #242E52;
 }
 
 .buttonSubmit{
@@ -62,7 +66,7 @@ h1, h2, h4, h6{
 .central{
     display: flex;
     justify-content:space-between; 
-    margin: 0 10% 0 10%;
+    margin: 0 10% 10% 10%;
 }
 
 .centralIzq{
@@ -70,11 +74,12 @@ h1, h2, h4, h6{
     flex-direction: column;
     justify-content: center;
     align-content: left;
-    width: 43%;
+    width: 48%;
 }
 
 h1{
-    font-size: 58px;
+    font-size: 54px;
+    color: #232C50;
 }
 
 .centralIzq p{
@@ -137,8 +142,8 @@ h1{
 
 .central2derecha input{
     border-radius: 30px;
-    width: 69px;
-    height: 43px;
+    width: 65px;
+    height: 40px;
     padding: 5 25;
     background: #F3603B;
     border-style: none;
@@ -242,7 +247,7 @@ footer{
     flex-direction: row;
     justify-content: space-around;
     padding: 4% 0;
-    background-color: aqua;
+    background-color:#1E1E26;
     width: 100%;
 }
 
@@ -282,11 +287,43 @@ footer{
     text-decoration: none;
 }
 
-.buttonFooter input{
-    border-radius: 50px;
-    padding: 3% 4%;
+.footerDer{
+    text-align: right;
 }
 
-input:hover{
-    text-decoration: underline;
+.buttonFooter input{
+    border-radius: 50px;
+    border-style: none;
+    padding: 3% 4%;
+    background-color: #FFFFFF;
+    margin-bottom: 23%;
+}
+
+.buttonFooter button{
+    border-radius: 50;
+    border-style: none;
+    padding: 3% 6%;
+    background-color: #F3603B;
+}
+
+.footerDer p{
+    color:#8C8C94;
+    size: 12px;
+}
+
+a{
+    transition: color .5s;
+}
+
+a:hover{
+    color: #F3603B;
+}
+
+i{
+    transition: color .5s;
+}
+
+i:hover{
+    color: #F3603B;
+    /* background-color: #1E1E26; */
 }
